[tool.poetry]
name = "jupyter-workspace"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
holoviews = "^1.20.0"
streamlit = "^1.40.0"
openpyxl = "^3.1.5"
sqlite4 = "^0.1.1"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
